[project]
name = "hud-multiturn"
version = "0.1.0"
description = "HUD Environment Example for Multi-turn Agent Loop"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "google-api-python-client",
    "google-auth",
    "anthropic",
    "google",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server", "task"]
